--- a/maxonts/src/screens/orders/orders.html
+++ b/maxonts/src/screens/orders/orders.html
@@ -27,7 +27,10 @@
   </div>
 
   <h2> Resultados </h2>
-
+  <div class="pagination">
+    <a click.trigger="previous()">❮</a>
+    <a  click.trigger="next()">❯</a>
+  </div>
   <!-- TODO: tabla -->
   <table class="table table-hover">
     <thead>
