--- a/maxonts/src/screens/outs_register/outs.html
+++ b/maxonts/src/screens/outs_register/outs.html
@@ -64,6 +64,6 @@
   <p>Next/Previous buttons:</p>
   <div class="pagination">
     <a click.trigger="pagination(1,0)">❮</a>
-    <button  click.trigger="pagination(1,1)">❯</button>
+    <a  click.trigger="pagination(1,1)">❯</a>
   </div>
 </template>
