--- a/maxonts/src/screens/inventory/inventory.html
+++ b/maxonts/src/screens/inventory/inventory.html
@@ -1,7 +1,7 @@
 <template>
   <h2> Inventario </h2>
 
-  <form submit.delegate="search()">
+  <div submit.delegate="search()">
     <b>Buscar</b>
     <div class="mb-3 search">
       <div>
@@ -29,7 +29,7 @@
     </div>
   </div>
 
-  <form >
+  <div >
     <b>Ordenar</b>
     <div class="mb-3 search">
       <div>
