--- a/maxonts/src/screens/loadEmployees/load.html
+++ b/maxonts/src/screens/loadEmployees/load.html
@@ -1,4 +1,6 @@
 <template>
-  <input type="file" accept=".csv" files.bind="data" />
-  <button click.delegate="load()" class="btn btn-primary">CLICK ME</button>
+  <div class="mb-3 search">
+  <input class='form-control' type="file" accept=".csv" files.bind="data" />
+  <button click.delegate="load()" class="btn btn-primary"> Registrar Empleados</button>
+</div>
 </template>
