--- a/maxonts/src/screens/loan_history/history.html
+++ b/maxonts/src/screens/loan_history/history.html
@@ -1,10 +1,14 @@
 <template>
   <h2> Historial de Prestamos </h2>
-  <form submit.delegate="search()">
+  <div submit.delegate="search()">
     <!-- START SEARCH FILTERES -->
-    <div class="mb-3 filters">
+    <div class="mb-3 filters search">
       <div>
         <label for="loan_info_employee" class="form-label label"> # De Empleado </label>
+        <input value.bind="query.idEmpleado" type="text" class="form-control" id="loan_info_employee">
+      </div>
+      <div>
+        <label for="loan_info_employee" class="form-label label"> Área </label>
         <input value.bind="query.idEmpleado" type="text" class="form-control" id="loan_info_employee">
       </div>
       <div>
