--- a/maxonts/src/screens/maintenance_register/maintenance_register.html
+++ b/maxonts/src/screens/maintenance_register/maintenance_register.html
@@ -1,5 +1,5 @@
 <template>
-  <button class="grayish-button waves-effect waves-light"
+  <button class=" btn btn-dark grayish-button waves-effect waves-light"
     click.delegate="Register()" type="submit" name="action">Registrar
     Mantenimiento</button>
   <h3> Consumibles</h3>
