--- a/maxonts/src/screens/orders/orders.html
+++ b/maxonts/src/screens/orders/orders.html
@@ -1,7 +1,7 @@
 <template>
   <h2> Pedidos </h2>
 
-  <form submit.delegate="filter()">
+  <div submit.delegate="filter()">
     <div class="mb-3 search">
       <div>
         <label>No. Item</label>
