--- a/maxonts/src/screens/returns/returns.html
+++ b/maxonts/src/screens/returns/returns.html
@@ -3,7 +3,7 @@
 
 
   <!-- START SEARCH FILTERES -->
-  <div class="mb-3 filters">
+  <div class="mb-3 search filters">
     <div>
       <label for="loan_info_employee" class="form-label label"> # De Empleado </label>
       <input value.bind="query.idEmpleado" type="text" class="form-control" id="loan_info_employee">
