--- a/maxonts/src/screens/test/test.html
+++ b/maxonts/src/screens/test/test.html
@@ -1,6 +1,6 @@
 <template>
   
-<form submit.delegate="run()">
+<div submit.delegate="run()">
     <button class="btn btn-primary" type="submit">Buscar</button>
   </div>
 
