--- a/maxonts/src/screens/In-Out/inOut.html
+++ b/maxonts/src/screens/In-Out/inOut.html
@@ -1,73 +1,76 @@
 <template>
+  <div> 
   <h2>Entradas - Salidas</h2>
 
-  <button click.delegate="redirect()"> Registrar Entrada Inventario Nuevo</button>
-  <form >
+  <button class = 'btn btn-primary' click.delegate="redirect()"> Registrar Entrada Inventario Nuevo</button>
+  <br>
+<div>
+  <div>
     Tipo de Movimiento
-    <select click.trigger="getName()"name="movement" value.bind="type">
+    <select  class='form-control' click.trigger="getName()"name="movement" value.bind="type">
       <option repeat.for="option of options " model.bind="option.valor">${option.name}</option>
 
     </select>
   </div>
   <div>
-    <form submit.trigger="addElement()">
-      <select name="type" value.bind="opt" id="type">
+    <div submit.trigger="addElement()">
+      <select class='form-control' name="type" value.bind="opt" id="type">
         <option model.bind="1">Consumible</option>
         <option model.bind="0">Herramienta</option>
       </select>
       <button type="submit" class="btn btn-primary"> Añadir + </button>
       <div>
         <div if.bind="opt">
-          <div class="filters">
+          <div class="filters mb-3 search">
             <label> Nombre
-              <select value.bind="property" change.delegate="matchParte(1,property)">
+              <select class='form-control' value.bind="property" change.delegate="matchParte(1,property)">
                 <option model.bind="null">Seleccionar</option>
                 <option repeat.for="name of NombresDeConsumibles" model.bind="name">${name}</option>
               </select>
             </label>
   
             <label> No Parte
-              <select value.bind="ConsumibleSelected" change.delegate="matchId(1,ConsumibleSelected)">
+              <select class='form-control' value.bind="ConsumibleSelected" change.delegate="matchId(1,ConsumibleSelected)">
                 <option model.bind="null">Seleccionar</option>
                 <option repeat.for="item of matchesConsumibles" model.bind="item">${item}</option>
               </select>
             </label>
   
             <label> idConsumible
-              <select value.bind="IDConsumibleSelected">
+              <select class='form-control' value.bind="IDConsumibleSelected">
                 <option model.bind="null">Selecciona</option>
                 <option repeat.for="item of matchesIdConsumibles" , model.bind='item'>${item}</option>
               </select>
             </label>
-            <label>Añadir <button click.delegate="AddCustom(1)"> + </button> </label>
+            <label>Añadir <button class='btn btn-dark'click.delegate="AddCustom(1)"> + </button> </label>
           </div>
           
         </div>
         <div if.bind="!opt">
-          <div class="filters">
+          <div class="filters search">
             <label> Nombre
-              <select value.bind="props" change.trigger="matchParte(0,props)">
+              <select class='form-control' value.bind="props" change.trigger="matchParte(0,props)">
                 <option model.bind="null">Seleccionar</option>
                 <option repeat.for="name of NombresDeHerramientas" model.bind="name">${name}</option>
               </select>
             </label>
 
             <label> No Parte
-              <select value.bind="HerramientaSelected" change.trigger="matchId(0,HerramientaSelected)">
+              <select class='form-control' value.bind="HerramientaSelected" change.trigger="matchId(0,HerramientaSelected)">
                 <option model.bind="null">Seleccionar</option>
                 <option repeat.for="item of matchesHerramientas" model.bind="item">${item}</option>
               </select>
             </label>
 
             <label if.bind="type"> idHerramienta
-              <select value.bind="IDHerramientaSelected">
+              <select class='form-control' value.bind="IDHerramientaSelected">
                 <option model.bind="null">Seleccionar</option>
                 <option repeat.for="item of matchesIdHerramientas" , model.bind='item'>${item}</option>
               </select>
             </label>
 
             <label>Añadir
-              <button click.delegate="AddCustom(0)"> +</button>
+              <button class='btn btn-dark'click.delegate="AddCustom(0)"> +</button>
             </label>
           </div>
           
