--- a/maxonts/src/screens/loans_info/loans_info.html
+++ b/maxonts/src/screens/loans_info/loans_info.html
@@ -67,7 +67,7 @@
       </label>
     </div>
   </div>
-  <form if.bind="!readonly">
+  <div if.bind="!readonly">
     <button class="btn btn-primary" click.delegate="commitChanges()" type="submit">Guardar Cambios</button>
   </div>
 </template>
