--- a/maxonts/src/screens/loadEmployees/load.html
+++ b/maxonts/src/screens/loadEmployees/load.html
@@ -3,4 +3,32 @@
   <input class='form-control' type="file" accept=".csv" files.bind="data" />
   <button click.delegate="load()" class="btn btn-primary"> Registrar Empleados</button>
 </div>
+<div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+</div>
+<h4> User Password Change</h4>
+<div class="search">
+  <label> Usuario
+  <input value.bind="username">
+  </label>
+  <label> Contraseña
+    <input value.bind="newPass">
+    </label>
+    <label> ConfirmarContraseña
+      <input value.bind="newPassConfirm">
+      </label>
+  <label>
+    <button class='btn btn-primary'>Guardar Cambio</button>
+  </label>
+</div>
 </template>
