--- a/maxonts/src/screens/outs_register/outs.html
+++ b/maxonts/src/screens/outs_register/outs.html
@@ -2,7 +2,19 @@
   <button class = 'btn btn-warning' click.delegate="redirect()">Registrar
     Entradas/Salidas</button>
   <button class="btn btn-warning" click.trigger="changeData()"> Cambiar a
-    ${titulo} </button>
+    ${types[not(typer)]} </button>
+    <div if.bind="typer==0" class="search filters mb-3">
+    <div>
+      <label>Fecha Inicio</label>
+      <abp-datetime-picker value.bind="query.startDate" options.bind="{ format: 'YYYY-MM-DD' }"></abp-datetime-picker>
+    </div>
+    <div>
+      <label>Fecha Final</label>
+      <abp-datetime-picker value.bind="query.endDate" options.bind="{ format: 'YYYY-MM-DD' }"></abp-datetime-picker>
+    </div>
+    <button type="button" click.delegate="search()" class="btn btn-primary">Buscar</button>
+    <button type="button" click.trigger="downloadReport()" class="btn btn-primary">Generar Reporte</button>
+  </div>
   <h1>${titulo}</h1>
   <h3>Herramientas</h3>
   <table class="table table-hover">
