--- a/maxonts/src/app.html
+++ b/maxonts/src/app.html
@@ -4,8 +4,8 @@
 
   <main>
     <section class="d-flex flex-row">
-      <sidebar class="col-3"></sidebar>
-      <router-view class="col-9 router_view bg-grayish"></router-view>
+      <sidebar style="width:20%; flex: 0 0 auto"></sidebar>
+      <router-view  style="width:80%;" class=" router_view bg-grayish"></router-view>
     </section>
   </main>
 
