--- a/maxonts/src/screens/maintenance_register/maintenance_register.html
+++ b/maxonts/src/screens/maintenance_register/maintenance_register.html
@@ -4,8 +4,8 @@
     Mantenimiento</button>
   <h3> Consumibles</h3>
   <div class="pagination">
-    <a click.trigger="previous(1)">❮</a>
-    <a  click.trigger="next(1)">❯</a>
+    <a class='left' click.trigger="previous(1)">❮</a>
+    <a class='right' click.trigger="next(1)">❯</a>
   </div>
   <table class="table table-hover">
     <thead>
@@ -40,8 +40,8 @@
 
   <h3> Herramientas</h3>
   <div class="pagination">
-    <a click.trigger="previous(0)">❮</a>
-    <a  click.trigger="next(0)">❯</a>
+    <a class='left' click.trigger="previous(0)">❮</a>
+    <a  class='right' click.trigger="next(0)">❯</a>
   </div>
   <table class="table table-hover">
     <thead>
