--- a/maxonts/src/screens/orders/orders.html
+++ b/maxonts/src/screens/orders/orders.html
@@ -28,8 +28,8 @@
 
   <h2> Resultados </h2>
   <div class="pagination">
-    <a click.trigger="previous()">❮</a>
-    <a  click.trigger="next()">❯</a>
+   <a class="left" click.trigger="previous()">❮</a>
+    <a class="right" click.trigger="next()">❯</a>
   </div>
   <!-- TODO: tabla -->
   <table class="table table-hover">
