--- a/maxonts/src/screens/loan_history/history.html
+++ b/maxonts/src/screens/loan_history/history.html
@@ -48,14 +48,15 @@
   </div>
   <h2> Resultados </h2>
   <div class="pagination">
-    <a click.trigger="previous()">❮</a>
-    <a  click.trigger="next()">❯</a>
+   <a class="left" click.trigger="previous()">❮</a>
+    <a class="right" click.trigger="next()">❯</a>
   </div>
   <table class="table table-hover">
     <thead>
       <tr>
         <th scope="col"># Prestamo</th>
         <th scope="col"># Empleado</th>
+        <th scope="col">Area</th>
         <th scope="col">Status</th>
         <th scope="col">Presto</th>
         <th scope="col">Fecha</th>
@@ -65,6 +66,7 @@
       <tr repeat.for="record of loans">
         <td><a route-href="route: loanInfo; params.bind: {id:record.idPrestamo, readOnly:'0'}">${record.idPrestamo}</a></td>
         <td>${record.idEmpleado}</td>
+        <td>${record.area}</td>
         <td>${mapStatus(record.status)}</td>
         <td>${idToUser(record.idUsuario)}</td>
         <td>${moment(record.fecha).format('DD/MM/YYYY')}</td>
