--- a/maxonts/src/screens/returns/returns.html
+++ b/maxonts/src/screens/returns/returns.html
@@ -43,8 +43,8 @@
 
   <h2> Resultados </h2>
   <div class="pagination">
-    <a click.trigger="previous()">❮</a>
-    <a  click.trigger="next()">❯</a>
+   <a class="left" click.trigger="previous()">❮</a>
+    <a class="right" click.trigger="next()">❯</a>
   </div>
   <table class="table table-hover">
     <thead>
