--- a/maxonts/src/screens/loan_history/history.html
+++ b/maxonts/src/screens/loan_history/history.html
@@ -27,6 +27,9 @@
           <option value=2>Entregado</option>
         </select>
       </div>
+      
+    </div>
+    <div class="mb-3 filters search">
       <div>
         <label>Fecha Inicio</label>
         <abp-datetime-picker value.bind="query.startDate" options.bind="{ format: 'YYYY-MM-DD' }"></abp-datetime-picker>
