--- a/maxonts/src/screens/maintenance/maintenance.html
+++ b/maxonts/src/screens/maintenance/maintenance.html
@@ -28,7 +28,7 @@
                 </select>
               </label>
     
-              <label> idConsumible
+              <label> No. Consumible
                 <select class='form-control' value.bind="IDConsumibleSelected">
                   <option model.bind="null">Selecciona</option>
                   <option repeat.for="item of matchesIdConsumibles" , model.bind='item'>${item}</option>
@@ -42,7 +42,7 @@
 
           <div if.bind="opt==0">
             <h3>Herramientas</h3>
-            <div class="filters">
+            <div class="filters search">
               <label> Nombre
                 <select class = 'form-control' value.bind="props" change.trigger="matchParte(0,props)">
                   <option model.bind="null">Seleccionar</option>
@@ -57,7 +57,7 @@
                 </select>
               </label>
   
-              <label> idConsumible
+              <label> No. Herramienta
                 <select class = 'form-control' value.bind="IDHerramientaSelected">
                   <option model.bind="null">Seleccionar</option>
                   <option repeat.for="item of matchesIdHerramientas" , model.bind='item'>${item}</option>
@@ -73,16 +73,16 @@
           <div if.bind="consumibles.length > 0">
             <h3> Consumibles</h3>
             <li repeat.for="item of consumibles.length">
-              <div class="filters">
-                <label for="exampleFormControlInput1" class="form-label"># de Consumible <input type="text" class="form-control" input.delegate="updateData(item,1)" id="exampleFormControlInput1" value.bind="$parent.consumibles[item]['idConsumible']">
+              <div class=" search">
+                <label for="exampleFormControlInput1" class="form-label">No. de Consumible <input type="text" class="form-control" input.delegate="updateData(item,1)" id="exampleFormControlInput1" value.bind="$parent.consumibles[item]['idConsumible']">
                 </label>
                 <label for="exampleFormControlInput2" class="form-label"># Parte <input disabled type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.consumibles[item]['idParte']">
                 </label>
                 <label for="exampleFormControlInput3" class="form-label">Cantidad <input type="text" class="form-control" id="exampleFormControlInput3" value.bind="$parent.consumibles[item]['cantidad']">
                 </label>
               </div>
-              <div class="filters">
-                <label for="exampleFormControlInput4" class="form-label">Comentatario <input type="text" class="form-control" id="exampleFormControlInput4" value.bind="$parent.consumibles[item]['comentario']">
+              <div class="filters search">
+                <label for="exampleFormControlInput4" class="form-label">Comentario <input type="text" class="form-control" id="exampleFormControlInput4" value.bind="$parent.consumibles[item]['comentario']">
                 </label>
                 <label for="exampleFormControlInput5" class="form-label">Area <input type="text" class="form-control" id="exampleFormControlInput5" value.bind="$parent.consumibles[item]['area']">
                 </label>
@@ -93,15 +93,15 @@
           <div if.bind="tools.length > 0">
             <h3> Herramienta</h3>
             <li repeat.for="item of tools.length">
-              <div class="filters">
-                <label for="exampleFormControlInput1" class="form-label"># de Herramienta <input type="text" class="form-control" input.delegate="updateData(item,0)" id="exampleFormControlInput1" value.bind="$parent.tools[item]['idHerramienta']">
+              <div class="filters searchm">
+                <label for="exampleFormControlInput1" class="form-label">No. de Herramienta <input type="text" class="form-control" input.delegate="updateData(item,0)" id="exampleFormControlInput1" value.bind="$parent.tools[item]['idHerramienta']">
                 </label>
                 <label for="exampleFormControlInput2" class="form-label"># Parte <input disabled type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.tools[item]['idParte']">
                 </label>
                 <label for="exampleFormControlInput3" class="form-label">Comentario <input type="text" class="form-control" id="exampleFormControlInput3" value.bind="$parent.tools[item]['comentario']">
                 </label>
               </div>
-              <div class="filters">
+              <div class="filters search">
                 <label for="exampleFormControlInput4" class="form-label">Area <input type="text" class="form-control" id="exampleFormControlInput4" value.bind="$parent.tools[item]['area']">
                 </label>
                 <label for="control">Eliminar<input type="checkbox" name="ordered" change.delegate="removeTool(item)" />&nbsp; </label>
